src/main/java/org/example/calories/error/ErrorInfo.java
package org.example.calories.error;

public record ErrorInfo(
        String message
) {
}
